Final UI aligned fix on pet screen

--- a/ui/game/pets/pets.less
+++ b/ui/game/pets/pets.less
@@ -145,24 +145,22 @@
          #activityTitle {
             text-align: left;
             width: 80px;
-            margin-left: 12px;
-            margin-right: 5px;
          }
          
          .listTitle[data-sort-key="health"] {
-            margin-right: 8px;
+            margin-left: 5px;
          }
          
          .listTitle[data-sort-key="hunger"] {
-            margin-right: 8px;
+            margin-left: 25px;
          }
          
          .listTitle[data-sort-key="social"] {
-            margin-right: 8px;
+            margin-left: 25px;
          }
          
          .listTitle[data-sort-key="sleepiness"] {
-            margin-right: 8px;
+            margin-left: 25px;
          }
          
          .listTitle h2 {
